# copernicusWeather2psdmWeather

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  config.yaml  create_docker_db.sh  docker-compose.yml  main.py  pyproject.toml  settings.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  simple-ci.yml
coordinates/: coordinates.py
input/: westfalia_2023_03_24-2023_03_28_accum.nc  westfalia_2024_06_01-2024_06_07_accum.nc  westfalia_2024_06_01-2024_06_07_instant.nc  westfalia_2024_10_25-2024_10_29_accum.nc  westfalia_2024_10_25-2024_10_29_instant.nc
input/samples/: N51_5W6_5S51_0E9_0-20250601-20250604-accum.nc  N51_5W6_5S51_0E9_0-20250601-20250604-instant.nc  N51_5W6_5S51_0E9_0-20250601-20250604.grib  N51_5W6_5S51_0E9_0-20260101-20260102.grib  westfalia_2023_03_24-2023_03_28_instant.nc
tests/: coordinates_test.py  grib_conversion_test.py  test_pytest.py
tests/integration/: grib_conversion_config.yaml  grib_conversion_test.py  netcdf_conversion_config.yaml  netcdf_conversion_test.py  weather_conversion_test_base.py
tests/resources/integration/: N51_5W6_5S51_0E9_0-20250601-20250604.csv  grib_conversion_config.yaml
weather/: __init__.py  config.py  convert.py  database.py  db_migration.py  logging_setup.py  models.py  processor.py  timer.py
