[tool.poetry]
name = "copernicusWeather2psdmWeather"
version = "0.1.0"
description = ""
authors = ["Thomas Oberliessen <thomas.oberliessen@googlemail.com>",
            "Daniel Feismann <daniel.feismann@tu-dortmund.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python =  ">3.11,<3.13"
pypsdm = "^0.0.6"
psycopg2 = "^2.9.10"
netcdf4 = "^1.7.2"
sqlmodel = "^0.0.24"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
flake8 = "^7.3.0"
flake8-black = "^0.3.6"
flake8-isort = "^6.1.2"
pre-commit = "^4.2.0"
PyYAML = "^6.0"

[tool.isort]
profile= "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
