[tool.poetry]
name = "copernicusWeather2psdmWeather"
version = "0.1.0"
description = ""
authors = ["Thomas Oberliessen <thomas.oberliessen@googlemail.com>",
            "Daniel Feismann <daniel.feismann@tu-dortmund.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python =  ">3.11,<3.13"
pypsdm = "^0.0.6"
psycopg2 = "^2.9.11"
netcdf4 = "^1.7.3"
sqlmodel = "^0.0.24"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.1"
flake8 = "^7.3.0"
flake8-black = "^0.4.0"
flake8-isort = "^7.0.0"
pre-commit = "^4.5.0"
PyYAML = "^6.0"

[tool.isort]
profile= "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
